2016-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* configure.ac: test version

2016-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* howm.el: change the order of "require"s for correct dependencies

	* action-lock.el: require howm-common for avoiding warning

	* riffle.el: ditto.

	* illusion.el: ditto.

	* howm-lang-en.el: ditto.

	* howm-lang-ja.el: ditto.

	* howm-common.el (howm-insert-file-contents):
	moved from howm-backend.el for yarot13-insert-file-contents

	* howm-vars.el (howm-menu-action-arg): moved from howm-menu.el
	for avoiding reference to free variable in howm-lang-*.el

	* howm-backend.el (howm-exclude-p): moved from howm-common.el

	* howm-mode.el (howm-history): moved from howm-common.el

	* howm-common.el (howm-fontify): useless now

2016-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* cheat-font-lock.el (cheat-font-lock-compiled-body):
	avoid warning in byte-compilation
	"... is not known to be defined."

	* howm-date.el (howm-action-lock-date-search): ditto.
	"function ... used to take 0+ arguments, now takes 1"

	* howm-misc.el (howm-ime-fix): ditto.
	delete obsolete fix for avoiding
	"`howm-raise-in-minor-mode-map-alist' is not known to be defined."

	* howm-vars.el (howm-dtime-format): ditto.
	moved from howm-mode.el for avoiding
	"... is not known to be defined." in `howm-write-log'.

	* howm-common.el (howm-normalize-file-name): ditto.
	moved from howm-misc.el for avoiding "not known to be defined."

	* howm-vars.el (howm-excluded-file-regexp): ditto.

2016-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* howm.el: update copyright years

2015-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* howm.el: use cl-lib instead of cl for avoiding warnings

	* howm-cl.el: howm-cl-* are now useless.

2015-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* howm-backend.el
	(howm-real-grep-single): use cl-labels for avoiding warnings
	(howm-real-grep-multi): ditto.
